service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-server-svc
spec:
  type: NodePort
  selector:
    app: wisecow-server
  ports:
    - port: 4499
      targetPort: 4499
      nodePort: 30499
